--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/platform-webworker": "^2.1.1",
     "@angular/platform-browser": "^2.1.1",
-    "es6-shim": "^0.35.1",
+    "@angular/forms":"2.1.1"
+,    "es6-shim": "^0.35.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-rc.1",
     "systemjs": "0.19.39",
